# grasp-planning

./: CMakeLists.txt  package.xml
config/: grasp_constraints.yaml
ros/include/grasp_planning/: image_detection_gqcnn_node.h
ros/launch/: grasp_planning_action_client.launch  grasp_planning_action_client_gqcnn.launch  image_detection_gqcnn.launch  ssd_keras_gqcnn.launch
ros/scripts/: grasp_planner_action_client
ros/src/: image_detection_gqcnn_node.cpp  ssd_keras_gqcnn_node.cpp
