<?xml version="1.0"?>
<package format="2">
  <name>grasp_planning</name>
  <version>0.0.0</version>
  <description>The grasp_planning package</description>

  <maintainer email="minh.nguyen@smail.inf.h-brs.de">Minh Nguyen</maintainer>

  <license>LGPLv3</license>

  <author email="minh.nguyen@smail.inf.h-brs.de">Minh Nguyen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mas_perception_libs</build_depend>
  <exec_depend>mas_perception_libs</exec_depend>
  <exec_depend>ssd_keras_ros</exec_depend>
  <exec_depend>gqcnn</exec_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
